<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperTrivialGame</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_play">Play</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_main">Main</string>
    <string name="title_menu">MAIN MENU</string>
    <string name="title_play">PLAY GAME</string>
    <string name="title_credits">CREDITS</string>
    <string name="title_setting">SETTINGS</string>
    <string name="boton_play">Play</string>
    <string name="boton_credits">Credits</string>
    <string name="boton_score">Score</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="texto_credits_1">Super Trivial Game!! \n para \n Diseño de Aplicaciones Basadas en Dispositivos Móviles</string>
    <string name="texto_credits_2">Autores: \n Francesc Nadal i Aura (frannaau@campusaula.com) Roberto Nova Cid (ronocid@campusaula.com)</string>
    <string name="titulo">SUPER TRIVIAL</string>
    <string name="titulo2">GAME</string>
    <string name="settings_useraName">User name:</string>
    <string name="settings_emailAdress">Email address:</string>
    <string name="settings_quiestionsPreferences">Question preferences:</string>
    <string name="settings_botonPreferences">Select preferences</string>
    <string name="settings_questionServer">Question server:</string>
    <string name="settings_addFriend">Add a friend@aposs email:</string>
    <string name="settings_botonAddFriend">Add friend</string>
    <string name="score">Score: 0</string>
    <string name="time">Time: </string>
    <string name="title_activity_creditos">Creditos</string>
    <string name="comodin">Comodin</string>
    <string name="title_activity_scores">Scores</string>
    <string name="score_username">User name</string>
	<string name="score_score">Score</string>
	<string name="score_ranking">Ranking</string>
	<string name="tab_tab1">Local users</string>
	<string name="tab_tab2">User Friends</string>

</resources>
