<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Play" 
    android:background="@drawable/fondo">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:src="@drawable/questiongreen4" />

    <TextView
        android:id="@+id/textView1"
        style="@style/LetrasPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/title_play"
        android:textSize="28sp"  />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toLeftOf="@+id/textView1"
        android:src="@drawable/questiongreen4" />

     <TextView
        style="@style/LetrasPlay"
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="19dp"
        android:text="@string/score" />

    <TextView
        style="@style/LetrasPlay"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/time" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time"
        android:layout_alignRight="@+id/imageView2"
        android:layout_toRightOf="@+id/time" />

    <TextView
        android:id="@+id/pregunta"
        style="@style/LetrasPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/score"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_below="@+id/score"
        android:gravity="center"
        android:text="TextView" />

    <Button
        android:id="@+id/respuesta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/score"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_below="@+id/pregunta"
        android:layout_marginTop="22dp"
        android:text="Button" />

    <Button
        android:id="@+id/respuesta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/respuesta1"
        android:layout_alignRight="@+id/respuesta1"
        android:layout_below="@+id/respuesta1"
        android:layout_marginTop="14dp"
        android:text="Button" />

    <Button
        android:id="@+id/respuesta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/respuesta2"
        android:layout_alignRight="@+id/respuesta2"
        android:layout_below="@+id/respuesta2"
        android:layout_marginTop="14dp"
        android:text="Button" />

    <Button
        android:id="@+id/respuesta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/respuesta3"
        android:layout_alignRight="@+id/respuesta3"
        android:layout_below="@+id/respuesta3"
        android:layout_marginTop="16dp"
        android:text="Button" />

</RelativeLayout>
